Fixed MAGETWO-9652: [Piece of Cake] Numbers are not clearly visible in QTY field on shopping cart page [IE8] - Search Field scroll bug fixed

--- a/app/design/frontend/magento2/piece-of-cake/css/styles.css
+++ b/app/design/frontend/magento2/piece-of-cake/css/styles.css
@@ -1959,7 +1959,7 @@ select:disabled {
   border-color: #b5b5b5;
   border-right: 0;
   float: left;
-  line-height: 29px;
+  line-height: 1;
   height: 29px;
   width: 100%;
 }
